fix z-index & access child props

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,8 @@ input[type="number"] {
   overflow-x: hidden !important;
   overflow-y: hidden !important;
   overscroll-behavior: contain !important;
+  z-index: 9999;
+  position: absolute;
 }
 
 .modal-vue3-body {
